Adding customers page and products page.

--- a/Proje_OOP/Views/Default/Index.cshtml
+++ b/Proje_OOP/Views/Default/Index.cshtml
@@ -9,3 +9,6 @@
 <h2>@ViewBag.m2</h2>
 <h2>@ViewBag.m3</h2>
 <h1>skadjksajdksa</h1>
+<h2>@ViewBag.p1</h2>
+<h2>@ViewBag.ad1</h2>
+<h1>sonuç: @ViewBag.tp</h1>
