--- a/Proje_OOP/Views/Default/Urunler.cshtml
+++ b/Proje_OOP/Views/Default/Urunler.cshtml
@@ -8,4 +8,7 @@
 <h3>@ViewBag.m1</h3>
 <h3>@ViewBag.m2</h3>
 <h3>@ViewBag.m3</h3>
-
+<h3>toplam: @ViewBag.t</h3>
+<h4>çevre: @ViewBag.c</h4>
+<h2>@ViewBag.ad1</h2>
+<h1>faktoriyel: @ViewBag.fak</h1>
